--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
-  
   <body>
-
-
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea deleniti, perferendis, eum excepturi aliquid
+    quidem maiores aperiam ut atque inventore aliquam voluptatum laborum. Debitis aperiam accusamus quidem quas amet!
 
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
