--- a/index.html
+++ b/index.html
@@ -18,12 +18,25 @@
       crossorigin="anonymous"
     ></script>
     <!-- stylesheets -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea deleniti, perferendis, eum excepturi aliquid
-    quidem maiores aperiam ut atque inventore aliquam voluptatum laborum. Debitis aperiam accusamus quidem quas amet!
+    <div class="container game">
+      <h1 id="player" class="player fas fa-frog"></h1>
+    </div>
+
+    <div class="row info">
+      <div class="md-6">
+        <h1>No Internet</h1>
+        <h3>Things you can try:</h3>
+        <ul>
+          <li>Lorem</li>
+          <li>Ipsum</li>
+        </ul>
+      </div>
+    </div>
 
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
